<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScandalouTravelTracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_claim">Add Claim</string>
    <string name="action_search_claims">Search Claims</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_claim">New Claim</string>
    <string name="title_activity_edit_claim">Editing Claim</string>
    <string name="title_activity_view_expense">Editing Expense</string>
    <string name="title_activity_edit_expense">Editing Expense</string>
    <string name="title_activity_expense_list">Expenses</string>
    <string name="title_activity_select_user">SelectUserActivity</string>
    <string name="title_activity_claim_list">Claims</string>
    <string name="claim_tracking_text">Claim Tracking:</string>
    <string name="create_user_text">New User</string>
    <string name="current_users_text">Select a User:</string>
    <string name="amount">Amount</string>
    <string name="date">Date:</string>
    <string name="description">Description</string>
    <string name="add_update">Add/update</string>
    <string name="edit_claim">Edit Claim</string>
    <string name="new_claim">New Claim</string>
    <string name="claimant_name">Claimant Name</string>
    <string name="edit_claim_update">Update</string>
    <string name="send">Send</string>
    <string name="add_claim">Add Claim</string>
    <string name="tags_tv">tags (separate by comma)</string>
    <string name="title_activity_add_expense">New Expense</string>
    <string name="add_expense">Add Expense</string>
    <string name="title_activity_view_expense_list">ViewExpenseListActivity</string>
    <string name="name_text_filler">User who made claim goes here </string>
    <string name="approver_text_filler">Approver goes here</string>
    <string name="approver_comment_text_filler">Approver comments go here</string>
    <string name="date_upper_text_filler">Upper Date</string>
    <string name="date_lower_text_filler">Lower Date</string>
    <string name="location_text_filler">Cities goes here</string>
    <string name="status_text_filler">Status</string>
    <string name="total_text_filler">Totals for the claim goes here</string>
    <string name="tag_text_filler">Tags for the claim goes here</string>
    <string name="expense_totals_text_filler">Expense Totals</string>
    <string name="expense_date_text_filler">Date Here</string>
    <string name="expense_category_text_filler">Expense Category</string>
    <string name="expense_description_text_filler">Expense Description</string>
    <string name="expense_destination_text_filler">Dest:</string>
    <string name="expense_incomplete_image_description">Image for incompleteness</string>
    <string name="claim_text">Claims</string>
    <string name="plus_sign_text">+</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="approval_seeker">Approval Seeker</string>
    <string name="update">Update</string>
    <string name="send_for_approval">Send for Approval</string>
    <string name="edit">Edit</string>
    <string name="expenses">Expenses</string>
    <string name="new_dest">New Destination</string>
    <string name="totals_">Totals:</string>
    <string name="receipt_text">Receipt: </string>
    <string name="confrim_location">Save New Location</string>
    <string name="gps_location">GPS</string>
    <string name="home_location">Home</string>
    <string name="location_filler">Latitude: 000.0000	Longitude: 000.0000</string>
    <string name="destinations_button_description">Add Destinations Button</string>
    <string name="destination_filler">Destination Name Here</string>
    <string name="destination_reason_filler">Destination Reason Here</string>
    <string name="add_destination_button_descr">Add Destination Button</string>
    <string name="date_hint">MM/DD/YYYY</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="send_claim">Send Claim</string>
	<string name="cost">Cost:</string>
	<string name="category">Category:</string>
	<string name="currency">Currency:</string>
	<string name="action_photo">Take Receipt Photo</string>
	
    <string-array name="claim_menu">
        <item>Edit/View Claim</item>
        <item>List Expenses for Claim</item>
        <item>Add Expense to Claim</item>
        <item>Delete Claim</item>
        <item>Approve/Reject Claim</item>
        <item >View Comments</item>
    </string-array>
    
    <string-array name="claim_menu_approver">
        <item>View Claim</item>
        <item>View Expenses</item>
        <item>Approve/Reject Claim</item>   
    </string-array>
    
     <string-array name="claim_menu_claimant_no_comment">
        <item>Edit/View Claim</item>
        <item>View Expenses</item>
        <item>Add Expense</item>
        <item>Delete Claim</item>
    </string-array>
    
    <string-array name="claim_menu_claimant_comment">
        <item>Edit/View Claim</item>
        <item>View Expenses</item>
        <item>Add Expense</item>
        <item>Delete Claim</item>
        <item>View Comments</item>
    </string-array>
    
    <string-array name="tag_menu">
        <item>Rename Tag</item>
        <item>Delete Tag</item>
    </string-array>
    <string-array name="approver_choices">
        <item>Change status to appoved</item>
        <item>Change status to returned</item>
    </string-array>

    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="destinations">Destinations</string>
    <string name="submit">Submit</string>
    <string name="add_tag">Add Tag</string>
    <string name="add">Add</string>
    <string name="change_user">Change User</string>
    <string name="change_role">Change Role</string>
    <string name="user_name_filler">Name of User</string>

    <string-array name="role_menu">
        <item>Claimant</item>
        <item>Approver</item>
    </string-array>

    <string name="view_all_tags">View All Tags</string>
    <string name="filter_claims">Filter Claims by Tag</string>
    <string name="restore_claims">Restore Claims</string>
    <string name="delete_user">Delete User</string>
    <string name="add_location_gps">Add Location using GPS</string>
    <string name="add_location_map">Add Location using Map</string>
    <string name="user_name">User Name: </string>
    <string name="user_latitude">Set Latitude: </string>
    <string name="user_longitude">Set Longitude: </string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="add_location_button">Add Location</string>
    <string name="edit_location_button">Edit/View Location</string>
    <string name="expense_add_location_filler">Location not set</string>
    <string name="title_activity_set_expense_location">SetExpenseLocationActivity</string>
    <string name="expense_location_icon">Expense Location Icon</string>
    <string name="expense_picture_icon">Expense Picture Icon</string>
    <string name="expense_flag_icon">Expense Flag Icon</string>
    <string name="title_activity_view_location">View Location</string>
    <string name="current_location_button">Go to Set Location</string>
    <string name="title_activity_receipt">ReceiptActivity</string>

    <string-array name="location_menu">
        <item>Change location to GPS Location</item>
        <item>Change/View Location Using a Map</item>
        <item>Clear Set Location</item>
    </string-array>

    <string name="clear_location">Clear Set Location</string>
    <string name="destination_location_icon"></string>
    <string name="title_activity_set_destination_location">SetDestinationLocationActivity</string>
    <string name="progress_bar_description">Distance from Home in Comparison to Other Claims:</string>

</resources>
