<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_user"
        android:title="@string/change_user"
        android:showAsAction="never"/>
 
    <item
        android:id="@+id/action_role"
        android:title="@string/change_role"
        android:showAsAction="never"/>
    
    <item
       	android:id="@+id/action_restore_claims"
       	android:title="@string/restore_claims"
       	android:showAsAction="never"/>
    
   	<item
        android:id="@+id/action_add_claim"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="90"
        android:showAsAction="ifRoom"
        android:title="@string/action_add_claim" />
   	
   	<item
   	    android:id="@+id/action_search_claims"
   	    android:icon="@drawable/ic_action_labels"
   	    android:orderInCategory="80"
   	    android:showAsAction="ifRoom"
   	    android:title="@string/action_search_claims" />
    
</menu>
