<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37474F" >

    <TextView
        android:id="@+id/claimListDestinationsTV"
        style="@style/TextFontMediumLV"
        android:layout_below="@+id/claimListDivider"
        android:text="@string/location_text_filler"
        android:textColor="#d3d3d3" />

    <TextView
        android:id="@+id/claimListTotalsTV"
        style="@style/TextFontMediumLV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/claimListDestinationsTV"
        android:text="@string/total_text_filler"
        android:textColor="#d3d3d3" />

    <TextView
        android:id="@+id/claimListTagsTV"
        style="@style/TextFontSmallLV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/claimListTotalsTV"
        android:text="@string/tag_text_filler"
        android:textColor="#d3d3d3" />

    <ProgressBar
        android:id="@+id/locationBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/progressBarTextView" />

    <TextView
        android:id="@+id/progressBarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/claimListTagsTV"
        android:hint="@string/progress_bar_description"
        android:paddingLeft="3dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#F2F2F2"
        android:textSize="13sp" />

    <RelativeLayout
        android:id="@+id/claimListUpperLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/claimListApproverSection"
        android:background="#455A64" >

        <TextView
            android:id="@+id/claimListStatusTV"
            style="@style/TextFontMediumLV"
            android:text="@string/status_text_filler" />

        <TextView
            android:id="@+id/claimListUpperDateTV"
            android:layout_alignParentRight="true"
            android:layout_marginRight="4dp"
            style="@style/TextFontSmall"
            android:text="@string/date_upper_text_filler" />

        <TextView
            android:id="@+id/claimListLowerDateTV"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/claimListUpperDateTV"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="2dp"
            style="@style/TextFontSmall"
            android:text="@string/date_lower_text_filler" />
        
    </RelativeLayout>
    
    <View
        android:id="@+id/claimListDivider"
        style="@style/Divider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/claimListUpperLayout" />

    <RelativeLayout
        android:id="@+id/claimListApproverSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#546E7A" >

        <TextView
            android:id="@+id/claimListNameTV"
            style="@style/TextFontMediumLV"
            android:text="@string/name_text_filler" />

        <TextView
            android:id="@+id/claimListApproverTV"
            style="@style/TextFontMediumLV"
            android:layout_below="@+id/claimListNameTV"
            android:text="@string/approver_text_filler" />
        
        <View
	        android:id="@+id/claimListApproverDivider"
	        style="@style/Divider"
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/claimListApproverTV" 
	        android:layout_marginBottom="1.5dp"/>
    </RelativeLayout>

</RelativeLayout>