<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditClaimActivity" >

    <TextView
        android:id="@+id/edit_claim_tv"
        style="@style/TextFontLarge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/new_claim" />

    <TextView
        android:id="@+id/claimant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_claim_tv"
        android:layout_below="@+id/edit_claim_tv"
        android:ems="10"
        android:hint="@string/claimant_name"
        android:visibility="gone" />

    <ListView
        android:id="@+id/destinations_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_claim_tags_tv"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/add_dest_button"
        android:layout_toRightOf="@+id/tags_sv"
        android:divider="@drawable/list_view_divider"
        android:dividerHeight="2dp" >
    </ListView>

    <ScrollView
        android:id="@+id/tags_sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_claim_description"
        android:layout_marginTop="53dp" >
    </ScrollView>

    <EditText
        android:id="@+id/edit_claim_description"
        style="@style/EditTextColors"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/new_claim_dates_linear_layout"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/claim_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/add_claim"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/new_claim_tags_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/claim_ok_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp"
        android:textSize="@dimen/tags" >
    </TextView>

    <Button
        android:id="@+id/new_claim_add_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_claim_tags_tv"
        android:layout_below="@+id/new_claim_tags_tv"
        android:text="@string/add_tag"
        android:textColor="#FFFFFF" />

    <ImageButton
        android:id="@+id/add_dest_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/edit_claim_description"
        android:layout_toRightOf="@+id/new_claim_destinations_label"
        android:contentDescription="@string/destinations_button_description"
        android:src="@android:drawable/ic_menu_add" />

    <LinearLayout
        android:id="@+id/new_claim_dates_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edit_claim_tv" >

        <EditText
            android:id="@+id/start_date"
            style="@style/EditTextColors"
            android:layout_weight="1"
            android:focusableInTouchMode="False"
            android:hint="@string/start_date"
            android:inputType="date" >
        </EditText>

        <EditText
            android:id="@+id/end_date"
            style="@style/EditTextColors"
            android:layout_weight="1"
            android:focusableInTouchMode="False"
            android:hint="@string/end_date"
            android:inputType="date" />
    </LinearLayout>

    <TextView
        android:id="@+id/new_claim_destinations_label"
        style="@style/TextFontLarge"
        android:layout_alignBottom="@+id/add_dest_button"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/add_dest_button"
        android:gravity="center_vertical"
        android:text="@string/destinations" />

</RelativeLayout>