<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#545454"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/expenseCategoryExpenseListTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/expense_category_text_filler"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="#FFFFFF"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"/>
    
        <TextView
        android:id="@+id/expenseDescriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expenseTotalsExpenseListTV"
        android:layout_below="@+id/expenseCategoryExpenseListTV"
        android:text="@string/expense_description_text_filler"
        android:textColor="#EEEEEE"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/expenseTotalsExpenseListTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/expenseDescriptionTV"
        android:text="@string/expense_totals_text_filler"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:textColor="#EEEEEE"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/expenseDateExpenseListTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/expenseDescriptionTV"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp"
        android:text="@string/expense_date_text_filler"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#EEEEEE"
        android:layout_marginBottom="5dp" />

    <ImageView
        android:id="@+id/expensePictureIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/expenseTotalsExpenseListTV"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/expenseLocationIcon"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/pictureicon"
        android:contentDescription="@string/expense_picture_icon" />

    <ImageView
        android:id="@+id/expenseLocationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/expenseTotalsExpenseListTV"
        android:layout_alignTop="@+id/expenseDescriptionTV"
        android:layout_toLeftOf="@+id/expensePictureIcon"
        android:layout_marginBottom="5dp"
        android:src="@drawable/mapmarker"
        android:contentDescription="@string/expense_location_icon" />

    <ImageView
        android:id="@+id/expenseFlagIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/expenseTotalsExpenseListTV"
        android:layout_alignTop="@+id/expenseLocationIcon"
        android:layout_marginBottom="5dp"
        android:layout_toLeftOf="@+id/expenseLocationIcon"
        android:src="@drawable/filledflag"
        android:contentDescription="@string/expense_flag_icon" />

</RelativeLayout>
