<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewExpenseActivity" >

    <TextView
        android:id="@+id/add_expense"
        style="@style/TextFontLarge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_expense" />

    <EditText
        android:id="@+id/description2"
        style="@style/EditTextColors"
        android:layout_alignLeft="@+id/add_expense"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/addExpenseDateAndCurrency"
        android:hint="@string/description" />

    <Button
        android:id="@+id/add_expense_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/add"
        android:textColor="#F2F2F2" />

    <Button
        android:id="@+id/add_expense_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/new_location_edit_text"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/description2"
        android:onClick="addLocation"
        android:text="@string/add_location_button" />

    <TextView
        android:id="@+id/new_location_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/description2"
        android:layout_toLeftOf="@+id/add_expense_location_button"
        android:ems="10"
        android:hint="@string/expense_add_location_filler"
        android:lines="2"
        android:maxLines="2"
        android:minLines="2"
        android:padding="12dp"
        android:singleLine="false"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/addExpenseCategoryAndAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/add_expense" >

        <Spinner
            android:id="@+id/category"
            style="@style/SpinnerColors"
            android:layout_weight="1"
            android:entries="@array/Category" />

        <EditText
            android:id="@+id/amount2"
            style="@style/EditTextColors"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addExpenseDateAndCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/addExpenseCategoryAndAmount" >

        <EditText
            android:id="@+id/date_expense2"
            style="@style/EditTextColors"
            android:layout_weight="1"
            android:focusableInTouchMode="False"
            android:hint="@string/date"
            android:inputType="date" >
        </EditText>

        <Spinner
            android:id="@+id/currency"
            style="@style/SpinnerColors"
            android:layout_weight="1"
            android:entries="@array/Currency" />
        
    </LinearLayout>

</RelativeLayout>