<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/user_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_margin="5dp"
        android:layout_marginBottom="2dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/user_info_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_latitude"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="2dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/user_info_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="2dp"
        android:text="@string/user_longitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
