<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37474F" >

    <TextView
        android:id="@+id/list_destination_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="#F2F2F2"
        android:text="@string/destination_filler"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/list_destination_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/list_destination_name"
        android:textColor="#F2F2F2"
        android:layout_marginBottom="8dp"
        android:text="@string/destination_reason_filler" />

    <ImageButton
        android:id="@+id/list_destination_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@android:drawable/ic_delete"
        android:contentDescription="@string/add_destination_button_descr" />

</RelativeLayout>
