<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewExpenseActivity" >
	
    <TextView
        android:id="@+id/edit_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/edit_expense"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <Spinner
        android:id="@+id/catspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_expense"
        android:layout_alignRight="@+id/edit_expense"
        android:layout_below="@+id/edit_expense"
        android:layout_marginTop="20dp"
        android:entries="@array/Category" />
    
	<EditText
	    android:id="@+id/date_expense"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/currencyspinner"
	    android:layout_alignLeft="@+id/catspinner"
	    android:layout_below="@+id/amount"
	    android:layout_toLeftOf="@+id/amount"
	    android:ems="10"
	    android:hint="@string/date"
	    android:inputType="date" />

    <Button
        android:id="@+id/claim_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/currencyspinner"
        android:layout_marginBottom="16dp"
        android:onClick="confirmEdit"
        android:text="@string/edit" />

    <Spinner
        android:id="@+id/currencyspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amount"
        android:layout_below="@+id/amount"
        android:entries="@array/Currency" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date_expense"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/date_expense"
        android:ems="10"
        android:hint="@string/description" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/catspinner"
        android:layout_alignTop="@+id/catspinner"
        android:layout_toRightOf="@+id/catspinner"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />
       
</RelativeLayout>
