<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#263238"
    android:orientation="horizontal" >

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="340dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/displayPickedLocationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/saveLocationButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/getLocationGPSHomeButtons"
        android:text="@string/location_filler" />

    <Button
        android:id="@+id/saveLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="saveLocation"
        android:padding="10dip"
        android:text="@string/confrim_location" />

    <LinearLayout
        android:id="@+id/getLocationGPSHomeButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/map" >

        <Button
            android:id="@+id/goGpsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goToGps"
            android:padding="10dip"
            android:text="@string/gps_location" />

        <Button
            android:id="@+id/goCurrentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"	
            android:onClick="goCurrent"
            android:text="@string/home_location" />
    </LinearLayout>

</RelativeLayout>